refac(gaps): use gap variables instead of fixed values

--- a/src/scss/base/generic.scss
+++ b/src/scss/base/generic.scss
@@ -86,7 +86,7 @@ code {
 
 hr {
   border-top-color: $border;
-  margin: $gap-y 0;
+  margin: $gap-top-bottom 0;
 }
 
 img {
