--- a/src/scss/elements/box.scss
+++ b/src/scss/elements/box.scss
@@ -1,11 +1,10 @@
 .box {
   @extend .block;
-
   background: $white;
   border-radius: 5px;
   box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1);
   display: block;
-  padding: 20px;
+  padding: $gap-top-bottom $gap-left-right;
 }
 
 a.box {
