--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -1,10 +1,11 @@
 main#main {
   max-width: $screen-max;
-  margin: auto;
+  margin: 0 auto;
   padding-top: 1.5 * $header-height;
   padding-bottom: 2 * $footer-height;
   padding-left: $gap-left;
   padding-right: $gap-right;
+
   @include phone {
     padding-left: 0;
     padding-right: 0;
