--- a/src/scss/util/extends.scss
+++ b/src/scss/util/extends.scss
@@ -14,3 +14,10 @@
     max-width: 100%;
   }
 }
+
+%section-box, .section-box {
+  background-color: #fff;
+  padding: 3*$gap-top-bottom 2*$gap-left-right;
+  border: 1px solid $grey-light;
+  border-radius: $radus-default;
+}
